# enigine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py  conanfile.txt
dev/: CMakeLists.txt  README.md  build.bat  build.sh  conanfile.txt
dev/src/: main.cpp
examples/hello_world/: CMakeLists.txt  README.md  build.sh  conanfile.txt
examples/hello_world/src/: main.cpp
src/: enigine.cpp  enigine.h
src/animation/: animation.cpp  animation.h  animator.cpp  animator.h  bone.cpp  bone.h
src/assets/: simple-shader.fs  simple-shader.vs
src/assets/hdris/: qwantani_puresky.hdr
src/assets/models/: cube.glb  cylinder.glb  icosahedron.glb  quad.glb  rim.glb  sphere.glb  sphere.mtl
src/assets/shaders/: anim.fs  anim.vs  brdf.fs  cubemap.fs  cubemap.vs  depth-shader.fs  downsample.fs  exhaust.fs  grass.fs  grass.vs  hdr-to-cubemap.fs  hdr-to-cubemap.vs  irradiance.fs  light-shader.fs  light-shader.vs  light-volume.fs  light-volume.vs  line-shader.fs  line-shader.vs  muzzle-flash.fs  muzzle-flash.vs  normal-shader.fs  normal-shader.vs  pbr-deferred-after.fs  pbr-deferred-after.vs  pbr-deferred-point-light.fs  pbr-deferred-point-light.vs  pbr-deferred-pre.fs  pbr.fs  pbr.vs  post-process.fs  post-process.vs  prefilter.fs  sample.vs  shadowing.fs  simple-deferred.fs  simple-shader.fs  simple-shader.vs  simple-shadow.fs  simple-shadow.vs  (+21 more)
src/assets/spaceship/: sphere.mtl
src/assets/terrain/: grass.mtl  stone.mtl
src/camera/: camera.cpp  camera.h
src/car_controller/: car_controller.cpp  car_controller.h  link_door.cpp  link_door.h  link_wheel.cpp  link_wheel.h
src/character/: character.cpp  character.h  np_character.cpp  np_character.h  playable_character.cpp  playable_character.h
src/character_controller/: character_controller.cpp  character_controller.h  speed_limiter.cpp  speed_limiter.h
src/character_task/: character_task.h  enter_car.cpp  enter_car.h  exit_car.cpp  exit_car.h  follow_path.cpp  follow_path.h  follow_task.cpp  follow_task.h
src/culling_manager/: culling_manager.cpp  culling_manager.h
src/file_manager/: file_manager.cpp  file_manager.h
src/input_manager/: input_manager.cpp  input_manager.h
src/material/: material.h
src/mesh/: mesh.cpp  mesh.h
src/model/: model.cpp  model.h
src/particle_engine/: particle_engine.cpp  particle_engine.h
src/pbr_manager/: pbr_manager.cpp  pbr_manager.h
src/physics_world/: physics_world.cpp  physics_world.h
src/physics_world/debug_drawer/: debug_drawer.cpp  debug_drawer.h
src/post_process/: bloom_manager.cpp  bloom_manager.h  post_process.cpp  post_process.h
src/ragdoll/: ragdoll.cpp  ragdoll.h
src/render_manager/: g_buffer.cpp  g_buffer.h  render_manager.cpp  render_manager.h  ssao.cpp  ssao.h
src/resource_manager/: resource_manager.cpp  resource_manager.h
src/shader/: shader.cpp  shader.h
src/shader_manager/: shader_manager.cpp  shader_manager.h
src/shadow_manager/: shadow_manager.cpp  shadow_manager.h
src/shadowmap_manager/: shadowmap_manager.cpp  shadowmap_manager.h
src/sound_engine/: sound_engine.cpp  sound_engine.h
src/task_manager/: task_manager.cpp  task_manager.h
src/terrain/: terrain.cpp  terrain.h
src/timer/: timer.cpp  timer.h
src/transform/: transform.cpp  transform.h
src/transform_link/: link_rigidbody.cpp  link_rigidbody.h  transform_link.h
src/ui/: base_ui.h  root_ui.cpp  root_ui.h
src/ui/animation/: animation_ui.cpp  animation_ui.h
src/ui/camera/: camera_ui.cpp  camera_ui.h
src/ui/character/: character_ui.cpp  character_ui.h
src/ui/common/: common_ui.cpp  common_ui.h  physics_ui.cpp  physics_ui.h  vector_ui.cpp  vector_ui.h
src/ui/particle/: particle_ui.cpp  particle_ui.h
src/ui/physics/: physics_ui.cpp  physics_ui.h
src/ui/ragdoll/: ragdoll_ui.cpp  ragdoll_ui.h
src/ui/render/: render_ui.cpp  render_ui.h
src/ui/resource/: resource_ui.cpp  resource_ui.h
src/ui/shadowmap/: shadowmap_ui.cpp  shadowmap_ui.h
src/ui/sound/: sound_ui.cpp  sound_ui.h
src/ui/system_monitor/: system_monitor_ui.cpp  system_monitor_ui.h
src/ui/temp/: temp_ui.cpp  temp_ui.h
src/ui/terrain/: terrain_ui.cpp  terrain_ui.h
src/ui/vehicle/: vehicle_ui.cpp  vehicle_ui.h
src/update_manager/: update_manager.cpp  update_manager.h
src/utils/: assimp_to_glm.h  bullet_glm.h  common.h
src/vehicle/: vehicle.cpp  vehicle.h
